# strands-verifier

./: .env.example  .gitignore  LICENSE  README.md  benchmark.py  main.py  pyproject.toml  requirements.txt
results/: sess-2025-09-25-c3a4784f.json  sess-2025-09-25-e12db104.json
source/: internal-spec-778-v2.txt  rfp-a123-v3.txt  rfp-a123-v5.txt
src/: config.py  models.py  orchestrator.py  table_viewer.py  telemetry.py  utils.py
src/agents/: citation_builder.py  claim_extractor.py  decision_judge.py  evidence_retriever.py
src/prompts/: citation_builder.yaml  claim_extractor.yaml  decision_judge.yaml  evidence_retriever.yaml  orchestrator.yaml
